# PlasmidLLM

./: .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  CLAUDE.md  README.md  TEST_RESULTS.md  VOCABULARY_UPDATE.md  eval_plannotate_summary.md  inspect_detectors.py  inspect_detectors_v2.py  inspect_plasmidkit.py  inspect_plasmidkit_v2.py  main.py  mamba_inference_full.csv  mamba_inference_samples.csv  pyproject.toml
.nextflow/: history
anyscale/: README.md  compute_config_4gpu.yaml  compute_config_plannotate.yaml  job_config.yaml  launch_v2_after_v1.sh  requirements.txt  run_anyscale.py  submit.sh
config/: env.yaml  token_config.yaml
configs/: config.yaml  exp_a_soft_ceiling.py  exp_b_presence_only.py  exp_c_two_phase.py  grpo_example.py  grpo_g6big.py  grpo_smoke_test.py  myriad_grpo.py  myriad_pretrain.py  p4_baseline.py  p4_grpo_baseline.py  p4_grpo_kmer6_moe.py  p4_grpo_kmer6_s3.py  p4_kmer6_moe.py  p4_kmer6_s3.py  p4_kmer6_s4.py  p4_moe_full.py  p4_moe_half.py  p4_smoke_test.py  ppo_g6big.py  pretrain_g6big.py  pretrain_kmer6_moe.py  pretrain_kmer6_s3.py  pretrain_kmer6_s4.py  pretrain_moe_full.py  pretrain_moe_half.py  pretraining_example.py  ray_g6big.py  rft_g6big.py  rloo_g6big.py  smoke_test.py
data/: special_tokens.txt  token_vocabulary_v4.json
docs/: CLEANUP_SUMMARY.md  CONFIG_TRAINING.md  GRPO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PROJECT_STRUCTURE.md
eval/: README.md  eval_log.md  eval_plannotate.py  run_batch_eval.sh
evaluation/: eval_alignment.py  eval_checkpoint.py
infra/: DATA_LOCATIONS.md  MYRIAD_HPC.md
notebooks/: Build_Training_Pairs.py  pretrained_analysis.ipynb  reward_func_testing.py  rl_MOE_test.ipynb
notes/: basics.md  eval_alignment_summary.md
plasmid_llm/: __init__.py  utils.py
post_training/: README.md  __init__.py  config.py  ppo_models.py  reward.py
pretraining/: README.md  __init__.py  train.py
reports/: rl_curriculum_strategy.md
scripts/: README.md  build_motif_registry.py  build_motif_registry_category.py  convert_to_hf.py  eval_checkpoint.py  eval_generate.py  eval_generate_hf.py  eval_plannotate.py  export_databricks_to_s3.py  generate.py  generate_plasmidkit_training_pairs.py  generate_plasmidkit_training_pairs_v2.py  generate_training_pairs_v3.py  inference_sample.py  launch_experiments.sh  log_eval_to_mlflow.py  run_experiments.sh  run_plannotate_on_generated.py  setup_p4.sh  train.py  train_grpo.py  train_hf.py  train_ppo.py  train_pretrain.py  train_ray.py  train_rft.py  train_rloo.py  train_with_config.py  upload_grpo_plannotate.py  upload_to_hf.py
sql/: 00_create_schemas.sql  10_optimize_and_constraints.sql
src/: __init__.py
tests/: smoke_test.py  test_algorithms.py  test_data.py  test_integration.py  test_losses.py  (+6 more)
(+807 files in other folders)
