[project]
name = "plasmid-llm"
version = "0.1.0"
description = "Language models for plasmid DNA sequence generation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "tokenizers>=0.15",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "mlflow>=2.10",
    "hydra-core>=1.3",
    "hydra-optuna-sweeper>=1.2",
    "boto3>=1.28",
]

[project.optional-dependencies]
mamba = ["mamba-ssm>=1.2", "causal-conv1d>=1.1"]
dev = ["pytest>=7.0", "ruff>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plasmid_llm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
