[project]
name = "plasmid-llm"
version = "0.1.0"
description = "Language models for plasmid DNA sequence generation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1,<2.10",
    "tokenizers>=0.15",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "mlflow>=2.10",
    "hydra-core>=1.3",
    "hydra-optuna-sweeper>=1.2",
    "boto3>=1.28",
    "psutil>=5.9",
]

[project.optional-dependencies]
mamba-cuda = ["mamba-ssm>=1.2", "causal-conv1d>=1.1"]
dev = ["pytest>=7.0", "ruff>=0.2"]
rl = [
    "trl>=0.8.0",         # HuggingFace TRL for GRPO
    "vllm>=0.4.0",        # Fast inference during sampling
    "parasail>=1.3.0",    # Smith-Waterman sequence alignment
    "biopython>=1.80",    # DNA translation utilities
    "accelerate>=0.20",   # Multi-GPU support
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plasmid_llm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
